Add bottom section

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
 
   <body>
     <header class="header">Header</header>
-    <footer class="footer">
-      Footer
-    </footer>
+    <main class="content">
+      <section class="section">Bottom section</section>
+    </main>
+    <footer class="footer">Footer</footer>
   </body>
 </html>
