--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <body>
     <header class="header">Header</header>
     <main class="content">
+      <section class="section">Top section</section>
       <section class="section">Bottom section</section>
     </main>
     <footer class="footer">Footer</footer>
